Correct placement of draft selector and saver on mobile.

--- a/src/ui/compose/ComposeDraftSelector.css
+++ b/src/ui/compose/ComposeDraftSelector.css
@@ -1,7 +1,3 @@
-.draft-selector {
-    margin-left: 1em;
-}
-
 .draft-selector .dropdown-menu {
 }
 
